--- a/app/src/main/res/menu/task_list_menu.xml
+++ b/app/src/main/res/menu/task_list_menu.xml
@@ -19,7 +19,7 @@
 
     <item
         android:id="@+id/tk_menu_task_delete"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         android:icon="@drawable/ic_delete_task"
         android:title="@string/title_menu_delete"
         />
